--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "react": "18.1.0",
-    "react-native": "0.70.6"
+    "react-native": "0.70.6",
+    "react-native-accordion-list-view": "^1.0.4",
+    "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-toast-message": "^2.1.5",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -29,7 +33,7 @@
     "react-native-typescript-transformer": "^1.2.13",
     "react-test-renderer": "18.1.0",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.9.3"
+    "typescript": "4.0.8"
   },
   "jest": {
     "preset": "react-native",
