fix: icon issue fixed and update ui with icons

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -29,6 +29,7 @@ target 'celebs' do
   target 'celebsTests' do
     inherit! :complete
     # Pods for testing
+    pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
   end
 
   post_install do |installer|
