--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.70.6",
     "react-native-accordion-list-view": "^1.0.4",
     "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-element-dropdown": "^2.5.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0"
   },
@@ -24,6 +25,7 @@
     "@types/jest": "^29.2.3",
     "@types/react": "^18.0.25",
     "@types/react-native": "^0.70.7",
+    "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
